News in 6.3.x, xxxx-yy-zz (not yet released)
-------------------------
* Add some new API (see the reference documentation).
* Experiments to simplify GtkStack custom switcher implementations.
  Moved the result to the attic/ directory.
* TeplView: add code from gedit: override delete_from_cursor vfunc.
  In gedit it's for the Ctrl+D keybinding to delete the current line.

News in 6.2.0, 2022-11-02
-------------------------
* Remove deprecated API.
* Add some new API (see the reference documentation).
* Small improvements.

News in 6.1.2, 2022-07-12
-------------------------
* API stability is no longer guaranteed.

* New features / API: see the index of new symbols in the reference
  documentation (generated with gtk-doc).
* Documentation improvements.

News in 6.1.1, 2022-06-10
-------------------------
* New features / API: see the index of new symbols in the reference
  documentation (generated with gtk-doc).
* Tests: files reorganization within the repository, have the following
  directories:
    - tests/interactive-tests/
    - tests/unit-tests/
* Documentation: split the API Reference into two parts:
    - Text Editor Support
    - General Utilities (more broadly applicable)
* Documentation: various other small improvements.

News in 6.0.2, 2022-05-27
-------------------------
* Build system: check if compiler supports --version-script linker option.

News in 6.0.1, 2022-05-02
-------------------------
* No changes.
* Note that a 6.00.0 version was released in 2021. The double 00 was a mistake.
  See https://download.gnome.org/sources/tepl/6.00/
  Hence the .1 micro version number in this release.

News in 5.99.1, 2022-04-21
--------------------------
* The project is now located at: https://gitlab.gnome.org/swilmet/tepl

* API changes:
 - The TeplInfoBar class has been reworked.

* New API:
 - tepl_pango_font_description_to_css()
 - TeplLanguageChooser
 - TeplLanguageChooserWidget
 - TeplLanguageChooserDialog
 - TeplProgressInfoBar