@@ -168,7 +168,7 @@ tepl_lib = library(
   link_depends: symbol_map,
   # link_whole is not supported with MSVC, so we use extract_all_objects().
   objects: tepl_static_lib.extract_all_objects(),
-  soversion: 1,
+  soversion: 2,
   install: true
 )
 
